# Progetti

C++/: main  main.cpp
C++/730Helper/: Makefile
C++/Forza4/: Makefile
C++/OpenGL/: Makefile
C++/PrePy/: .clang-format  Makefile  results.json  test.py
C++/PrePy_Preprocessor/: .cproject  .project  Makefile
C++/Simulatore/: .cproject  .project
C++/XORAi2.0/: .gitignore  CMakeLists.txt
C++/XORAi2.0/include/: logger.hpp  neural_network.hpp  settings.hpp
C++/XORAi2.0/src/: logger.cpp  main.cpp  neural_network.cpp
C++/prova/: Makefile
Godot/pong-premium/: icon.svg.import  project.godot
Kicad/RobottinoCingolucci/: RobottinoCingolucci.kicad_prl  RobottinoCingolucci.kicad_pro
Libbrerie/SensoreSeguiLinea/: library.properties
PlatformIO/Esp32_camera/: platformio.ini
PlatformIO/MQTTNodeRed/: platformio.ini
Progetti arduino/CodiceFormaSchermoGrosso/: CodiceFormaSchermoGrosso.ino
Progetti arduino/Diop/: Diop.ino
Progetti arduino/UsbToTTL/: UsbToTTL.ino
Progetti arduino/noderedmqttwebserver/: noderedmqttwebserver.ino
Progetti arduino/sketch_dec18a/: sketch_dec18a.ino
Progetti arduino/sketch_feb10a/: sketch_feb10a.ino
Progetti arduino/termostato/: termostato.ino
Progetti python/: Codice.py  JupyterNotebook.ipynb
Progetti python/EspCamBallDetect/: cam.py
Progetti python/ImparaForza4/: main.py  testmatplot.py
Progetti_arduino/Pluviometro1.0/: Pluviometro1.0.ino
Progetti_arduino/Semaforo/: Semaforo.ino
Progetti_arduino/datalogger/: datalogger.ino
Progetti_python/: README.dataset.txt  README.roboflow.txt  data.yaml  testPallina.py
(+1652 files in other folders)
